fix side scrolling issue on mobile

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -98,7 +98,7 @@
     }
 
     #education {
-        font-size:10px;
+        font-size:11px;
         margin:30px;
     }
     #programmer {
@@ -161,5 +161,7 @@
         margin:0 20px;
         text-align: center;
     }
-
+    .text-muted {
+        font-size:12px;
+    }
 }
